Fix: time-traveling post bug 🕰️  content stuck in the past

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -72,6 +72,7 @@ body {
     border-radius: 1rem;
     padding: 1rem;
     background-color: #353535;
+    overflow-x: auto;
   }
 
   ul,
